# zapret-gtk

./: .gitignore  Cargo.toml  LICENSE.md  README.md  zapret-gtk.desktop
locale/en_US/LC_MESSAGES/: zapret-gtk.mo
locale/ru_RU/LC_MESSAGES/: zapret-gtk.mo
packaging/aur/: PKGBUILD
po/: en.po  ru.po
src/: main.rs
